--- a/hw1/styles.css
+++ b/hw1/styles.css
@@ -10,6 +10,8 @@ body {
 }
 .menu {
     /* background-color: #555; */
+    min-width: 600px;
+    width: 100%;
     margin-top: 7vh;
     height: 6vh;
     /* border: 2px solid #555; */
@@ -28,8 +30,8 @@ body {
 .menu label {
     display: inline-block;
     height: 100%;
-    padding: 0 10px;
-    margin: 0 50px;
+    padding: 0 2vw;
+    margin: 0 2vw;
     line-height: 5.8vh;
     color: rgb(141, 106, 67);
     cursor: pointer;
@@ -83,6 +85,7 @@ body {
     border-radius: 10px;
     margin-top: 3vh;
     width: 100%;
+    min-width: 600px;
     height: 60vh;
     border: 1px solid black;
     transition: all 0.7s ease-in-out;
