--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -79,6 +79,8 @@ h1 {
     /* overflow: auto; */
 }
 .column {
+    position: relative;
+    display: inline-block;
     width: 16%;
     padding-top: 10px;
     padding: 2px;
@@ -150,4 +152,25 @@ h1 {
     .column {
         width: 100%;
     }
+}
+
+.column .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 100;
+    background-color: #FFF;
+    padding: 5px 2px 2px;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+    opacity: .5;
+    text-align: center;
+    font-size: 22px;
+    line-height: 10px;
+    border-radius: 50%;
+}
+
+.column .close:hover {
+    opacity: 1;
 }
