--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -80,7 +80,6 @@ input[type='checkbox'] {
     max-height: 23em;
     overflow: scroll;
 }
-
 .todo-app__item {
     position: relative;
     width: 100%;
@@ -131,6 +130,10 @@ input[type='checkbox'] {
     transition: opacity 0.3s;
     height: 100%;
 }
+.complete {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
 
 .todo-app__footer {
     width: 100%;
@@ -145,6 +148,9 @@ input[type='checkbox'] {
     border-top: 0.5px solid rgba(0, 0, 0, 0.089);
 }
 
+.hide {
+    display: none;
+}
 .todo-app__total {
     min-width: 3em;
 }
@@ -205,7 +211,6 @@ input[type='checkbox'] {
     transition: opacity 0.3s;
     border: none;
 }
-
 .todo-item-input:focus {
     outline: none;
 }
