--- a/hw5/src/styles.css
+++ b/hw5/src/styles.css
@@ -1,237 +1,93 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
-html,
 body {
+    background-color: burlywood;
+    display: grid;
+    place-content: center; 
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    font-size: 2rem;
+    /* border: 1px solid red; */
+}
+
+.container {
+    height: 85vh;
+    width: 50vh;
+    background-color: black;
+    border-radius: 1rem;
+    padding: 1rem;
+    box-shadow: 7px 7px 5px 0px rgba(50,50,50,0.75)
+}
+
+.wrapper {
+    display: grid;
     height: 100%;
-    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background: rgb(245, 245, 245);
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    gap: 10px;
+}
+
+.expression {
+    grid-column: 1 / -1;
+    color: white;
+    text-align: right;
+    font-size: 3rem;
     overflow: hidden;
 }
 
-input[type='checkbox'] {
-    visibility: hidden;
+.screen {
+    grid-column: 1 / -1;
+    color: white;
+    text-align: right;
+    padding: 0.5rem;
+    font-size: 4rem;
+    overflow: hidden;
 }
 
-.todo-app__root {
-    margin: 0 auto;
-    /* margin-top: 7em; */
-    width: 50em;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 1em;
-    color: #4d4d4d;
-    font-weight: 300;
-}
-
-.todo-app__header {
-    margin-bottom: 1em;
-}
-
-.todo-app__title {
-    font-size: 100px;
-    font-weight: 100;
-    text-align: center;
-    color: rgba(175, 47, 47, 0.15);
-    margin: 0;
-    padding: 0;
-}
-
-.todo-app__main {
-    width: 100%;
-}
-
-.todo-app__input {
-    padding: 16px;
-    border: none;
-    color: inherit;
-    background: rgba(254, 254, 254);
-    font-size: 24px;
-    font-weight: 200;
-    line-height: 1.4em;
-    width: 100%;
-    background: rgb(254, 254, 254);
-    box-shadow: inset 0px 0px 10px 2px rgba(0, 0, 0, 0.048);
-    border: 1px solid rgba(0, 0, 0, 0.089);
-    height: 5rem;
-}
-
-.todo-app__input:focus {
-    outline: none;
-}
-
-.todo-app__input::placeholder {
-    font-weight: 100;
-    opacity: 0.6;
-}
-
-.todo-app__main {
-    background: rgb(254, 254, 254);
-}
-
-.todo-app__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    /* 5*5=25 */
-    max-height: 23em;
-    overflow: scroll;
-}
-.todo-app__item {
-    position: relative;
-    width: 100%;
-    min-height: 5em;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    background: white;
-    border: 1px solid rgba(0, 0, 0, 0.089);
-    border-top: 0;
-}
-
-.todo-app__checkbox {
-    width: 30px;
-    height: 30px;
-    background: #ddd;
-    margin: 15px;
-    border-radius: 100%;
-    position: relative;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.312);
-}
-
-.todo-app__checkbox label {
-    width: 20px;
-    height: 20px;
-    border-radius: 100px;
-
-    transition: all 0.5s ease;
+.btn {
+    display: grid;
+    place-content: center;
+    background-color: rgb(54, 52, 52);
+    border-radius: 50%;
+    color: white;
     cursor: pointer;
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    z-index: 1;
-
-    background: rgba(99, 99, 99, 0.698);
-    box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.312);
+    font-weight: bold;
 }
 
-.todo-app__checkbox input[type='checkbox']:checked + label {
-    background: #26ca299b;
+.btn:hover {
+    background-color: gray;
 }
 
-.todo-app__item-detail {
-    font-weight: 300;
-    overflow-wrap: break-word;
-    width: 90%;
-    transition: opacity 0.3s;
-    height: 100%;
-}
-.complete {
-    text-decoration: line-through;
-    opacity: 0.5;
+.light-gray {
+    background-color: gray;
+    color: black;
+} 
+
+.light-gray:hover {
+    background-color: white;
 }
 
-.todo-app__footer {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.orange {
+    background-color: orange;
+}
+
+.orange:hover {
+    background-color: white;
+    color: orange
+}
+
+.zero {
+    grid-column: 1 / span 2;
+    border-radius: 35px;
+    place-content: unset;
     align-items: center;
-    height: 3em;
-    padding: 1em;
-    background: white;
-    border: 1px solid rgba(0, 0, 0, 0.089);
-    border-top: 0.5px solid rgba(0, 0, 0, 0.089);
-}
-
-.hide {
-    display: none;
-}
-.todo-app__total {
-    min-width: 3em;
-}
-
-.todo-app__view-buttons {
-    display: flex;
-    margin: 0;
-    margin-left: 2em;
-    padding: 0;
-    width: 12em;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-}
-
-.todo-app__view-buttons button {
-    border: none;
-    padding: 5px;
-    font-size: 0.8em;
-    font-weight: inherit;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.todo-app__view-buttons button:hover {
-    transform: scale(1.1);
-}
-.todo-app__view-buttons button:focus {
-    outline: none;
-}
-
-.todo-app__clean {
-    vertical-align: middle;
-}
-
-.todo-app__clean button {
-    border: none;
-    padding: 5px;
-    border: 1px solid transparent;
-    font-size: 0.8em;
-    font-weight: inherit;
-    cursor: pointer;
-}
-
-.todo-app__clean button:focus {
-    outline: none;
-}
-
-.todo-app__clean button:hover {
-    text-decoration: underline;
-}
-
-.todo-item-input {
-    font-size: 1.5em;
-    font-weight: 300;
-    overflow-wrap: break-word;
-    width: 80%;
-    min-height: 3em;
-    transition: opacity 0.3s;
-    border: none;
-}
-.todo-item-input:focus {
-    outline: none;
-}
-
-.todo-app__item-x {
-    display: none;
-}
-
-.todo-app__item:hover .todo-app__item-x {
-    display: inline;
-    position: absolute;
-    max-width: 20px;
-    max-height: 20px;
-    right: 20px;
-}
-
-.todo-app__item:hover .todo-app__item-x:hover {
-    max-width: 25px;
-    max-height: 25px;
-    right: 17.5px;
-    cursor: pointer;
+    padding-left: 2rem;
 }
