--- a/hw9/src/App.css
+++ b/hw9/src/App.css
@@ -20,6 +20,12 @@
   font-size: 3em;
 }
 
+.App-title h2 {
+  margin: 0;
+  margin-right: 20px;
+  font-size: 2em;
+}
+
 .App-messages {
   width: 100%;
   height: 300px;
@@ -28,4 +34,19 @@
   margin: 20px;
   padding: 20px;
   overflow: auto;
+}
+
+.App-receives {
+  width: 100%;
+  text-align: right;
+  margin-left: 10px;
+}
+
+.App-receives span {
+  padding-right: 10px;
+}
+
+.App-showcase {
+  width: 100%;
+  text-align: left;
 }
